fix: hide back-to-top on mobile

--- a/assets/scss/base/_responsive.scss
+++ b/assets/scss/base/_responsive.scss
@@ -7,6 +7,9 @@
         transform: none;
         float: right;
     }
+    #back-to-top {
+        display: none;
+    }
     @if ($headerLayoutFlex) {
         @if ($enableNavToggle) {
             .header-inner {
